Generate .d.ts bundle from source (#9992)
* use dts-buddy

* updates

* fixes

* tidy up

* rename

* format

* bump dts-buddy

* bump

* add prepublishOnly script

* build types before running check

* Invalid should be Failure

* ugh

* fix

* fix

* fix

* get site building

* try this

* fix

* reinstate code

* appease eslint

* fix some stuff

* prettier

* fix

* appease typescript

* fix

* "eslint: so you can remember why you hate programming"

* remove unused types

* use proper imports for ambient types

* jfc eslint fuck OFF

* try this

* bump dts-buddy

* try this

* function interfaces need to be types now. who the hell knows why

* hide-the-pain-harold.jpg

* juggle some stuff

* jfc

* expose __sveltekit/paths and __sveltekit/environment

* exclude internal module declarations

* fix docs

* Update packages/kit/src/exports/public.d.ts

Co-authored-by: Ben McCann <322311+benmccann@users.noreply.github.com>

* format

---------

Co-authored-by: Rich Harris <git@rich-harris.dev>
Co-authored-by: Ben McCann <322311+benmccann@users.noreply.github.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,14 @@
 	"env": {
 		"es2022": true
 	},
-	"ignorePatterns": ["packages/create-svelte/shared/"],
+	"ignorePatterns": [
+		"packages/create-svelte/shared/",
+		"packages/kit/test/prerendering/*/build",
+		"packages/adapter-static/test/apps/*/build",
+		"packages/adapter-cloudflare/files",
+		"packages/adapter-netlify/files",
+		"packages/adapter-node/files"
+	],
 	"rules": {
 		"no-undef": "off"
 	}
