--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
           cache: pnpm
       - run: pnpm install --frozen-lockfile
       - run: pnpm run lint
+      - run: cd packages/kit && pnpm prepublishOnly
       - run: pnpm run check
   Tests:
     runs-on: ${{ matrix.os }}
@@ -136,4 +137,5 @@ jobs:
           node-version: 16
           cache: pnpm
       - run: pnpm install --frozen-lockfile
+      - run: cd packages/kit && pnpm prepublishOnly
       - run: pnpm run test:create-svelte
