--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -33,6 +33,7 @@
 		"@types/node": "^16.18.6",
 		"@types/sade": "^1.7.4",
 		"@types/set-cookie-parser": "^2.4.2",
+		"dts-buddy": "^0.0.9",
 		"marked": "^4.2.3",
 		"rollup": "^3.7.0",
 		"svelte": "^3.56.0",
@@ -67,7 +68,8 @@
 		"test:cross-platform:dev": "pnpm -r --workspace-concurrency 1 --filter=\"./test/**\" test:cross-platform:dev",
 		"test:cross-platform:build": "pnpm test:unit && pnpm -r --workspace-concurrency 1 --filter=\"./test/**\" test:cross-platform:build",
 		"test:unit": "vitest --config kit.vitest.config.js run",
-		"postinstall": "node postinstall.js"
+		"postinstall": "node postinstall.js",
+		"prepublishOnly": "node scripts/generate-dts.js"
 	},
 	"exports": {
 		"./package.json": "./package.json",
@@ -76,15 +78,19 @@
 			"import": "./src/exports/index.js"
 		},
 		"./node": {
+			"types": "./types/index.d.ts",
 			"import": "./src/exports/node/index.js"
 		},
 		"./node/polyfills": {
+			"types": "./types/index.d.ts",
 			"import": "./src/exports/node/polyfills.js"
 		},
 		"./hooks": {
+			"types": "./types/index.d.ts",
 			"import": "./src/exports/hooks/index.js"
 		},
 		"./vite": {
+			"types": "./types/index.d.ts",
 			"import": "./src/exports/vite/index.js"
 		}
 	},
