--- a/packages/kit/tsconfig.json
+++ b/packages/kit/tsconfig.json
@@ -9,9 +9,10 @@
 		"moduleResolution": "node",
 		"allowSyntheticDefaultImports": true,
 		"paths": {
-			"@sveltejs/kit": ["./types/index"],
+			"@sveltejs/kit": ["./src/exports/public.d.ts"],
+			"@sveltejs/kit/node": ["./src/exports/node/index.js"],
 			// internal use only
-			"types": ["./types/internal"]
+			"types": ["./src/types/internal"]
 		},
 		"noUnusedLocals": true,
 		"noUnusedParameters": true
@@ -19,7 +20,7 @@
 	"include": [
 		"scripts/**/*",
 		"src/**/*",
-		"types/**/*",
+		"src/types/**/*",
 		"../../sites/kit.svelte.dev/scripts/extract-types.js"
 	],
 	"exclude": ["./**/write_types/test/**"]
