--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -11,7 +11,7 @@
 	"homepage": "https://kit.svelte.dev",
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/vite-plugin-svelte": "^2.1.1",
+		"@sveltejs/vite-plugin-svelte": "^2.4.1",
 		"@types/cookie": "^0.5.1",
 		"cookie": "^0.5.0",
 		"devalue": "^4.3.1",
@@ -43,7 +43,7 @@
 		"vitest": "^0.31.0"
 	},
 	"peerDependencies": {
-		"svelte": "^3.54.0",
+		"svelte": "^3.54.0 || ^4.0.0-next.0",
 		"vite": "^4.0.0"
 	},
 	"bin": {
