--- a/packages/package/package.json
+++ b/packages/package/package.json
@@ -24,7 +24,7 @@
 		"uvu": "^0.5.6"
 	},
 	"peerDependencies": {
-		"svelte": "^3.44.0"
+		"svelte": "^3.44.0 || ^4.0.0"
 	},
 	"bin": {
 		"svelte-package": "svelte-package.js"
