feat: export `VERSION` from `@sveltejs/kit` (#9969)
Closes #9937

---------

Co-authored-by: Rich Harris <hello@rich-harris.dev>
Co-authored-by: Ben McCann <322311+benmccann@users.noreply.github.com>
Co-authored-by: Rich Harris <git@rich-harris.dev>
Co-authored-by: Ivan Hofer <ivan.hofer@outlok.com>

--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -68,7 +68,8 @@
 		"test:cross-platform:build": "pnpm test:unit && pnpm -r --workspace-concurrency 1 --filter=\"./test/**\" test:cross-platform:build",
 		"test:unit": "vitest --config kit.vitest.config.js run",
 		"postinstall": "node postinstall.js",
-		"prepublishOnly": "node scripts/generate-dts.js"
+		"prepublishOnly": "node scripts/generate-dts.js",
+		"generate:version": "node scripts/generate-version.js"
 	},
 	"exports": {
 		"./package.json": "./package.json",
