--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"lint": "pnpm -r lint && eslint --cache --cache-location node_modules/.eslintcache 'packages/**/*.js'",
 		"format": "pnpm -r format",
 		"precommit": "pnpm format && pnpm lint",
+		"changeset:version": "pnpm -r generate:version && git add --all",
 		"release": "changeset publish",
 		"start": "cd sites/kit.svelte.dev && npm run dev"
 	},
