--- a/packages/package/package.json
+++ b/packages/package/package.json
@@ -14,10 +14,12 @@
 		"chokidar": "^3.5.3",
 		"kleur": "^4.1.5",
 		"sade": "^1.8.1",
-		"svelte2tsx": "~0.6.16"
+		"semver": "^7.5.3",
+		"svelte2tsx": "~0.6.19"
 	},
 	"devDependencies": {
 		"@types/node": "^16.18.6",
+		"@types/semver": "^7.5.0",
 		"svelte": "^4.0.3",
 		"svelte-preprocess": "^5.0.4",
 		"typescript": "^4.9.4",
