--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -27,6 +27,7 @@
 		"kleur": "^4.1.5",
 		"magic-string": "^0.30.0",
 		"prompts": "^2.4.2",
+		"semver": "^7.5.3",
 		"tiny-glob": "^0.2.9",
 		"ts-morph": "^19.0.0",
 		"typescript": "^5.0.4"
@@ -34,6 +35,7 @@
 	"devDependencies": {
 		"@types/node": "^16.18.6",
 		"@types/prompts": "^2.4.1",
+		"@types/semver": "^7.5.0",
 		"prettier": "^2.8.0",
 		"vitest": "^0.32.2"
 	},
