--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -68,8 +68,9 @@
 		"test:cross-platform:build": "pnpm test:unit && pnpm -r --workspace-concurrency 1 --filter=\"./test/**\" test:cross-platform:build",
 		"test:unit": "vitest --config kit.vitest.config.js run",
 		"postinstall": "node postinstall.js",
-		"prepublishOnly": "node scripts/generate-dts.js",
-		"generate:version": "node scripts/generate-version.js"
+		"prepublishOnly": "pnpm generate:types",
+		"generate:version": "node scripts/generate-version.js",
+		"generate:types": "node scripts/generate-dts.js"
 	},
 	"exports": {
 		"./package.json": "./package.json",
