fix: process globs in `pkg.workspaces` (#10625)
Co-authored-by: gtmnayan <50981692+gtm-nayan@users.noreply.github.com>
Co-authored-by: Ben McCann <322311+benmccann@users.noreply.github.com>

--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -22,6 +22,7 @@
 		"sade": "^1.8.1",
 		"set-cookie-parser": "^2.6.0",
 		"sirv": "^2.0.2",
+		"tiny-glob": "^0.2.9",
 		"undici": "~5.23.0"
 	},
 	"devDependencies": {
