--- a/packages/create-svelte/tsconfig.json
+++ b/packages/create-svelte/tsconfig.json
@@ -10,5 +10,5 @@
 		"strict": true,
 		"skipLibCheck": true
 	},
-	"include": ["./scripts/**/*", "./test/*.js", "./index.js", "./bin.js", "./utils.js"]
+	"include": ["./scripts/**/*", "./test/*.js", "./*.js"]
 }
