--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -18,7 +18,7 @@
 		"esm-env": "^1.0.0",
 		"kleur": "^4.1.5",
 		"magic-string": "^0.30.0",
-		"mime": "^3.0.0",
+		"mrmime": "^1.0.1",
 		"sade": "^1.8.1",
 		"set-cookie-parser": "^2.6.0",
 		"sirv": "^2.0.2",
@@ -28,7 +28,6 @@
 	"devDependencies": {
 		"@playwright/test": "1.30.0",
 		"@types/connect": "^3.4.35",
-		"@types/mime": "^3.0.1",
 		"@types/node": "^16.18.6",
 		"@types/sade": "^1.7.4",
 		"@types/set-cookie-parser": "^2.4.2",
