chore: update types resolution setup (#10997)
Co-authored-by: Ben McCann <322311+benmccann@users.noreply.github.com>

--- a/packages/adapter-netlify/tsconfig.json
+++ b/packages/adapter-netlify/tsconfig.json
@@ -4,8 +4,10 @@
 		"checkJs": true,
 		"noEmit": true,
 		"noImplicitAny": true,
-		"module": "es2022",
 		"target": "es2022",
+		"module": "es2022",
+		// `@netlify/function` > `@netlify/serverless-functions-api` types are not compatible,
+		// so using this moduleResolution for now
 		"moduleResolution": "node",
 		"allowSyntheticDefaultImports": true,
 		"baseUrl": ".",
