--- a/packages/adapter-node/tsconfig.json
+++ b/packages/adapter-node/tsconfig.json
@@ -6,11 +6,8 @@
 		"noImplicitAny": true,
 		"allowSyntheticDefaultImports": true,
 		"target": "es2022",
-		"module": "es2022",
-		// Can't use moduleResolution: node16 because of these issues:
-		// https://github.com/rollup/plugins/issues/1329
-		// https://github.com/lukeed/polka/issues/199
-		"moduleResolution": "node",
+		"module": "node16",
+		"moduleResolution": "node16",
 		"baseUrl": ".",
 		"paths": {
 			"@sveltejs/kit": ["../kit/types/index"]
