--- a/packages/enhanced-img/package.json
+++ b/packages/enhanced-img/package.json
@@ -28,14 +28,15 @@
 	"dependencies": {
 		"magic-string": "^0.30.0",
 		"svelte-parse-markup": "^0.1.1",
-		"vite-imagetools": "^6.2.5"
+		"vite-imagetools": "^6.2.6"
 	},
 	"devDependencies": {
 		"@types/estree": "^1.0.2",
 		"@types/node": "^16.18.6",
 		"estree-walker": "^3.0.3",
+		"rollup": "^4.2.0",
 		"svelte": "^4.2.7",
-		"typescript": "^4.9.4",
+		"typescript": "^5.3.2",
 		"vite": "^5.0.4",
 		"vitest": "^0.34.0"
 	}
