--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -40,7 +40,7 @@
 		"vitest": "^0.34.5"
 	},
 	"peerDependencies": {
-		"svelte": "^3.54.0 || ^4.0.0-next.0 || ^5.0.0-next.0",
+		"svelte": "^4.0.0 || ^5.0.0-next.0",
 		"vite": "^5.0.3"
 	},
 	"bin": {
