--- a/packages/adapter-auto/package.json
+++ b/packages/adapter-auto/package.json
@@ -31,6 +31,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/kit": "workspace:^",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/node": "^16.18.6",
 		"typescript": "^5.3.2"
 	},
