--- a/packages/adapter-netlify/package.json
+++ b/packages/adapter-netlify/package.json
@@ -43,6 +43,7 @@
 		"@rollup/plugin-json": "^6.0.1",
 		"@rollup/plugin-node-resolve": "^15.2.3",
 		"@sveltejs/kit": "workspace:^",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/node": "^16.18.6",
 		"@types/set-cookie-parser": "^2.4.2",
 		"rollup": "^4.2.0",
