--- a/packages/adapter-node/package.json
+++ b/packages/adapter-node/package.json
@@ -35,6 +35,7 @@
 	"devDependencies": {
 		"@polka/url": "^1.0.0-next.23",
 		"@sveltejs/kit": "workspace:^",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/node": "^16.18.6",
 		"c8": "^8.0.0",
 		"polka": "^1.0.0-next.23",
