--- a/packages/adapter-static/package.json
+++ b/packages/adapter-static/package.json
@@ -32,6 +32,7 @@
 	"devDependencies": {
 		"@playwright/test": "1.30.0",
 		"@sveltejs/kit": "workspace:^",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/node": "^16.18.6",
 		"sirv": "^2.0.3",
 		"svelte": "^4.2.7",
