--- a/packages/adapter-vercel/package.json
+++ b/packages/adapter-vercel/package.json
@@ -36,6 +36,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/kit": "workspace:^",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/node": "^16.18.6",
 		"typescript": "^5.3.2",
 		"vitest": "^0.34.5"
