--- a/playgrounds/basic/package.json
+++ b/playgrounds/basic/package.json
@@ -10,6 +10,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "workspace:*",
 		"@sveltejs/kit": "workspace:*",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"svelte": "^4.2.7",
 		"typescript": "^5.3.2",
 		"vite": "^5.0.4"
