--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -21,14 +21,13 @@
 		"sade": "^1.8.1",
 		"set-cookie-parser": "^2.6.0",
 		"sirv": "^2.0.2",
-		"tiny-glob": "^0.2.9",
-		"undici": "~5.26.2"
+		"tiny-glob": "^0.2.9"
 	},
 	"devDependencies": {
 		"@playwright/test": "1.30.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/connect": "^3.4.35",
-		"@types/node": "^16.18.6",
+		"@types/node": "^18.19.1",
 		"@types/sade": "^1.7.4",
 		"@types/set-cookie-parser": "^2.4.2",
 		"dts-buddy": "^0.4.1",
@@ -96,6 +95,6 @@
 	},
 	"types": "types/index.d.ts",
 	"engines": {
-		"node": "^16.14 || >=18"
+		"node": ">=18.13"
 	}
 }
