--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
 		"precommit": "pnpm format && pnpm lint",
 		"changeset:version": "changeset version && pnpm -r generate:version && git add --all",
 		"changeset:release": "changeset publish",
-		"start": "cd sites/kit.svelte.dev && npm run dev",
-		"postinstall": "pnpm -r generate:types"
+		"start": "cd sites/kit.svelte.dev && npm run dev"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.26.2",
