feat: allow SvelteKit 2 as peer dependency (#11233)
* feat: allow SvelteKit 2 as peer dependency

* fix

* update lockfile

--- a/packages/adapter-cloudflare/package.json
+++ b/packages/adapter-cloudflare/package.json
@@ -42,7 +42,7 @@
 		"typescript": "^5.3.2"
 	},
 	"peerDependencies": {
-		"@sveltejs/kit": "^1.0.0"
+		"@sveltejs/kit": "^1.0.0 || ^2.0.0"
 	},
 	"publishConfig": {
 		"access": "public"
