--- a/packages/amp/package.json
+++ b/packages/amp/package.json
@@ -27,6 +27,6 @@
 		"format": "pnpm lint --write"
 	},
 	"peerDependencies": {
-		"@sveltejs/kit": "^1.0.0"
+		"@sveltejs/kit": "^1.0.0 || ^2.0.0"
 	}
 }
