--- a/packages/adapter-node/package.json
+++ b/packages/adapter-node/package.json
@@ -33,21 +33,21 @@
 		"prepublishOnly": "pnpm build"
 	},
 	"devDependencies": {
-		"@polka/url": "^1.0.0-next.24",
+		"@polka/url": "1.0.0-next.24",
 		"@sveltejs/kit": "workspace:^",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/node": "^18.19.1",
-		"c8": "^8.0.0",
-		"polka": "^1.0.0-next.24",
+		"@sveltejs/vite-plugin-svelte": "^3.0.1",
+		"@types/node": "^18.19.3",
+		"c8": "^8.0.1",
+		"polka": "1.0.0-next.24",
 		"sirv": "^2.0.3",
-		"typescript": "^5.3.2",
-		"vitest": "^1.0.0"
+		"typescript": "^5.3.3",
+		"vitest": "^1.0.4"
 	},
 	"dependencies": {
 		"@rollup/plugin-commonjs": "^25.0.7",
-		"@rollup/plugin-json": "^6.0.1",
+		"@rollup/plugin-json": "^6.1.0",
 		"@rollup/plugin-node-resolve": "^15.2.3",
-		"rollup": "^4.2.0"
+		"rollup": "^4.8.0"
 	},
 	"peerDependencies": {
 		"@sveltejs/kit": "^1.0.0 || ^2.0.0"
