breaking: stop re-exporting vitePreprocess (#11297)
---------

Co-authored-by: Rich Harris <rich.harris@vercel.com>
Co-authored-by: Simon Holthausen <simon.holthausen@vercel.com>

--- a/packages/package/package.json
+++ b/packages/package/package.json
@@ -18,6 +18,7 @@
 		"svelte2tsx": "~0.6.27"
 	},
 	"devDependencies": {
+		"@sveltejs/vite-plugin-svelte": "^3.0.1",
 		"@types/node": "^18.19.3",
 		"@types/semver": "^7.5.6",
 		"svelte": "^4.2.8",
