breaking: require SvelteKit 2 for all adapters (#11316)
Bumping all the adapters to require SvelteKit 2, because a) esbuild changes and we want to be careful b) easier to do minors using new capabilities c) adapter-auto is more robust in installing correct versions then

--- a/packages/adapter-cloudflare-workers/package.json
+++ b/packages/adapter-cloudflare-workers/package.json
@@ -35,11 +35,12 @@
 		"esbuild": "^0.19.9"
 	},
 	"devDependencies": {
+		"@sveltejs/kit": "workspace:^",
 		"@cloudflare/kv-asset-handler": "^0.3.0",
 		"@types/node": "^18.19.3",
 		"typescript": "^5.3.3"
 	},
 	"peerDependencies": {
-		"@sveltejs/kit": "^1.0.0 || ^2.0.0"
+		"@sveltejs/kit": "^2.0.0"
 	}
 }
