--- a/packages/adapter-cloudflare/package.json
+++ b/packages/adapter-cloudflare/package.json
@@ -37,12 +37,13 @@
 		"worktop": "0.8.0-next.15"
 	},
 	"devDependencies": {
+		"@sveltejs/kit": "workspace:^",
 		"@types/node": "^18.19.3",
 		"@types/ws": "^8.5.10",
 		"typescript": "^5.3.3"
 	},
 	"peerDependencies": {
-		"@sveltejs/kit": "^1.0.0 || ^2.0.0"
+		"@sveltejs/kit": "^2.0.0"
 	},
 	"publishConfig": {
 		"access": "public"
