--- a/packages/adapter-auto/package.json
+++ b/packages/adapter-auto/package.json
@@ -39,6 +39,6 @@
 		"import-meta-resolve": "^4.0.0"
 	},
 	"peerDependencies": {
-		"@sveltejs/kit": "^1.0.0 || ^2.0.0"
+		"@sveltejs/kit": "^2.0.0"
 	}
 }
